first draft of options is working

--- a/options.html
+++ b/options.html
@@ -2,17 +2,14 @@
 <html>
 <head><title>Gmail CRM Options</title></head>
 <body>
+	<h1>Gmail CRM Options</h1>
+	<h2>Custom links</h2>
+	<br /><b>Label</b> <input type="text" id="url_0_label" />
+	<br /><b>Href</b> https://<input type="text" id="url_0_href" /> (put %%EMAIL%% where you want the email to be set)
 
-Favorite language:
-<select id="language">
- <option value="fr">Français</option>
- <option value="en">English</option>
-</select>
+	<div id="status"></div>
+	<button id="save">Save</button>
 
-
-<div id="status"></div>
-<button id="save">Save</button>
-
-<script src="options.js"></script>
+	<script src="options.js"></script>
 </body>
 </html>
